# 321

./: .coverage  .env.example  .gitignore  FINAL_REPORT.md  README.md  coverage.xml  discovery_config.toml  pyproject.toml  pytest.ini  test_crash.py
data/catalog_live_audit/: .gitignore  README.md
data/interim/: features.json  manifest.json  matches.json  observations.json
data/processed/: joined.json  manifest.json  no_predictions.json  predictions.json  reconciliation.json
data/raw/: forebet_predictions_finished.html  forebet_predictions_malformed.html  forebet_predictions_revised.html  manifest.json  soccerstats_matches_malformed.html  soccerstats_pmatch_complete.html
data/regression_baseline/: features.sha256  manifest.json  no_predictions.sha256  predictions.sha256  reconciliation.sha256  report_2026-07-21.sha256
data/reports/: report_2026-07-21.json  report_2026-07-22.json  report_2026-07-23.json  soccerstats_result_details_3bacb94e-3db2-49d5-8521-f9438ff9b7d0.json  soccerstats_result_details_5a7b012f-9601-487f-98ba-a2760e637f30.json
docs/: ARCHITECTURE.md  DATA_CONTRACTS.md  FIELD_DICTIONARY.md  FINAL_REPORT.md  HISTORICAL_EVALUATION.md  MODEL_CARD.md  OPERATIONS.md  RED_TEAM.md  SOURCE_CATALOG.md  SOURCE_POLICY.md  TEST_FIXTURES.md
scripts/: analyze_joined.py  join_today.py  verify_baseline_hashes.py
src/soccer_factory/: __init__.py  cli.py  reconciliation.py
src/soccer_factory.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  generate_fixtures.py
tests/contract/: test_discovery_fixtures.py  test_parsers.py
(+568 files in other folders)
